add badge and icon