@@ -1,6 +1,14 @@
 plugins {
     id 'java'
     id 'jacoco'
+    id 'application'
+    id 'info.solidsoft.pitest' version '1.7.4'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
 
 repositories {
@@ -9,18 +17,33 @@ repositories {
 
 dependencies {
 
-    testImplementation(platform("org.junit:junit-bom:5.7.1"))
+    testImplementation(platform("org.junit:junit-bom:5.8.2"))
     testImplementation("org.junit.jupiter:junit-jupiter")
-    testImplementation("org.assertj:assertj-core:3.19.0")
-    testImplementation("com.approvaltests:approvaltests:10.3.0")
+    testImplementation("org.assertj:assertj-core:3.22.0")
+    testImplementation("com.approvaltests:approvaltests:15.2.0")
+    testImplementation("com.larseckart:junit-tcr-extensions:0.0.1")
+    testImplementation("org.mockito:mockito-core:4.5.1")
+    testImplementation("org.mockito:mockito-junit-jupiter:4.5.1")
 }
 
 tasks.withType(JavaCompile) {
     options.compilerArgs.add("-Xlint:all")
     options.incremental = true
+}
 
-    if (jdkWithPreviewFeatures())
-        options.compilerArgs.add("--enable-preview")
+
+application {
+    mainClass.set("ferry.booking.Program")
+}
+
+jar {
+    manifest {
+        attributes "Main-Class": "ferry.booking.Program"
+    }
+
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
 
 test {
@@ -29,25 +52,29 @@ test {
         events "passed", "skipped", "failed"
     }
     finalizedBy jacocoTestReport
-
-    if (jdkWithPreviewFeatures())
-        jvmArgs("--enable-preview")
 }
 
 jacoco {
-    toolVersion = "0.8.6"
+    toolVersion = "0.8.7"
 }
 
 jacocoTestReport {
+    dependsOn test
     reports {
-        xml.enabled false
-        csv.enabled false
+        xml.required = false
+        csv.required = false
         html.destination file("${buildDir}/jacocoHtml")
     }
 }
 
-static def jdkWithPreviewFeatures() {
-    def currentJvm = org.gradle.internal.jvm.Jvm.current()
-    def matcher = currentJvm =~ /^\d+/
-    return matcher[0].toInteger() > 11
+project.tasks.check.dependsOn("pitest")
+pitest {
+    junit5PluginVersion = '0.15'
+    testSourceSets = [sourceSets.test]
+    mainSourceSets = [sourceSets.main]
+    targetClasses = ['ferry.booking.*']
+    pitestVersion = '1.7.0'
+    threads = 4
+    outputFormats = ['XML', 'HTML']
+    timestampedReports = false
 }
